# notedash

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  bun.lockb  justfile  package.json
.github/workflows/: ci.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/web/: .env.example  package.json  svelte.config.js  tsconfig.json  vite.config.ts
apps/web/src/: app.css  app.d.ts  app.html
apps/web/src/lib/adapters/: appearance.ts  caldav-credentials.ts  caldav.test.ts  caldav.ts  email.test.ts  email.ts  nextcloud-login.ts  obsidian.test.ts  obsidian.ts  rss.test.ts  rss.ts  uptime-kuma.test.ts  uptime-kuma.ts
apps/web/src/lib/cache/: ttl-cache.ts
apps/web/src/lib/components/: AppearanceSettings.svelte  FeedStatusSettings.svelte  OnboardingModal.svelte  SectionHeading.svelte  SetupChecklist.svelte  StatusPill.svelte  TaskSyncDialog.svelte  WidgetCard.svelte  WidgetRefreshButton.svelte
apps/web/src/lib/core/: wasm.ts
apps/web/src/lib/onboarding/: checklist.test.ts  checklist.ts  profile-mapping.test.ts  profile-mapping.ts  session-state.test.ts  session-state.ts  validation.test.ts  validation.ts
apps/web/src/lib/settings/: appearance-settings.test.ts  appearance-settings.ts  layout-settings.test.ts  layout-settings.ts  runtime-settings.test.ts  runtime-settings.ts  user-profile-settings.test.ts  user-profile-settings.ts
apps/web/src/lib/sync/: task-sync.test.ts  (+1 more)
apps/web/src/routes/: +layout.ts  +page.svelte
crates/core/: Cargo.toml
crates/core/src/: lib.rs
docs/: architecture.md  configuration.md  development.md  integrations.md  security.md
(+3 files in other folders)
