[package]
name = "notedash-core"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Shared Notedash domain logic for native and WASM targets."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
