[package]
name = "notedash-desktop"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
notedash-core = { path = "../../../crates/core" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
