[package]
name = "notedash-desktop"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
notedash-core = { path = "../../../crates/core" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
keyring = "3"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5", default-features = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
